--- a/app/static/base.css
+++ b/app/static/base.css
@@ -6,7 +6,19 @@ body {
 .navbar {
     height: 50px;
     background-color: royalblue;
-    padding-left: 40px;
+    padding-left: 20px;
+
+    display: grid;
+    grid-template-columns: 0% 6% 10%;
+    #demo {
+        grid-column-start: 2;
+    }
+    #about {
+        grid-column-start: 3;
+    }
+    .projname {
+        grid-column-start: 4;
+    }
 
     .demo,
     .about,
@@ -15,23 +27,18 @@ body {
         color: white;
         background: none;
         border: none;
+        display: grid;
+        align-items: center;
     }
 
     .demo,
     .about {
-        margin-top: 14px;
         font-size: 16px;
         cursor: pointer;
     }
 
-    .about {
-        margin-left: 20px;
-    }
-
     .projname {
         font-size: 22px;
-        float: right;
-        margin-right: 10px;
-        margin-top: 10px;
+        justify-items: right;
     }
 }
