--- a/app/static/inpainting.css
+++ b/app/static/inpainting.css
@@ -18,7 +18,7 @@
 
 .images {
     display: grid;
-    grid-template-columns: calc(100% / 3);
+    grid-template-columns: 1fr 1fr 1fr;
     text-align: center;
     justify-content: center;
 }
@@ -45,6 +45,7 @@
 #masked,
 #output {
     width: 90%;
+    height: auto;
 }
 .images > div > button {
     margin-bottom: 10px;
